Reset Main to Allow User Input for Monte Carlo

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,6 @@ draft_app.yaml
 
 # Node Modules Not Tracked
 node_modules/
+
+# Ignore downloaded files that are not part of the project
+downloads/
