--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 annotated-types==0.7.0
+black==24.4.2
+click==8.1.7
 joblib==1.4.2
+mypy-extensions==1.0.0
 numpy==2.0.0
+packaging==24.1
 pandas==2.2.2
+pathspec==0.12.1
+platformdirs==4.2.2
 pydantic==2.7.4
 pydantic_core==2.18.4
 python-dateutil==2.9.0.post0
