--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix",
+		"format": "prettier --write ."
 	},
 	"dependencies": {
 		"@nextui-org/button": "2.0.37",
@@ -27,6 +28,7 @@
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.4",
 		"next-themes": "^0.2.1",
+		"prettier": "^3.3.3",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
 	},
