--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "next-app-template",
+	"name": "ff-monte-carlo-frontend",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -30,7 +30,8 @@
 		"next-themes": "^0.2.1",
 		"prettier": "^3.3.3",
 		"react": "18.3.1",
-		"react-dom": "18.3.1"
+		"react-dom": "18.3.1",
+		"react-icons": "^5.3.0"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
