--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,11 +26,11 @@
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.4",
+		"next": "^14.2.6",
 		"next-themes": "^0.2.1",
 		"prettier": "^3.3.3",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"react-icons": "^5.3.0"
 	},
 	"devDependencies": {
@@ -41,7 +41,7 @@
 		"@typescript-eslint/parser": "7.2.0",
 		"autoprefixer": "10.4.19",
 		"eslint": "^8.57.0",
-		"eslint-config-next": "14.2.1",
+		"eslint-config-next": "^14.2.6",
 		"eslint-config-prettier": "^8.2.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
