--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
 		"@nextui-org/link": "2.0.34",
 		"@nextui-org/listbox": "2.1.25",
 		"@nextui-org/navbar": "2.0.36",
+		"@nextui-org/progress": "^2.0.33",
 		"@nextui-org/snippet": "2.0.41",
 		"@nextui-org/switch": "2.0.33",
 		"@nextui-org/system": "2.2.5",
 		"@nextui-org/theme": "2.2.9",
 		"@react-aria/ssr": "3.9.4",
 		"@react-aria/visually-hidden": "3.8.12",
+		"@reduxjs/toolkit": "^2.2.7",
 		"clsx": "2.1.1",
 		"framer-motion": "~11.1.1",
 		"intl-messageformat": "^10.5.0",
@@ -31,7 +33,8 @@
 		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-icons": "^5.3.0"
+		"react-icons": "^5.3.0",
+		"react-redux": "^9.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "20.5.7",
